Fixed cannot find register email template html, migrated java to java 21 lts, Added HeadersUtil and ResponseUtil